add img refactor

--- a/css/style.css
+++ b/css/style.css
@@ -53,30 +53,31 @@ body {
   flex: 0 0 25%;
   display: flex; }
   .search__input {
+    outline: none;
     font-family: inherit;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 700;
     border: none;
-    border-radius: .4rem;
+    border-radius: .4rem 0 0 .4rem;
     background-color: var(--color-grey-dark-1);
     color: var(--color-grey-dark-3);
     width: 100%;
     height: 4.5rem;
-    padding: 0 1.5rem;
-    margin-right: -3rem; }
+    padding-left: 1.5rem; }
   .search__button {
+    background-color: var(--color-grey-dark-1);
+    padding: 0 1.5rem 0 .5rem;
     border: none;
-    background-color: var(--color-grey-dark-1); }
+    border-radius: 0 .4rem .4rem 0;
+    display: flex; }
     .search__button:hover {
       cursor: pointer; }
   .search__icon {
     width: 1.75rem;
     height: 1.75rem;
-    fill: var(--color-grey-dark-3);
-    transform: translateY(0.15rem); }
+    fill: var(--color-grey-dark-3); }
 
 .user-nav {
-  align-self: stretch;
   font-weight: 700;
   display: flex;
   align-items: center; }
@@ -126,3 +127,11 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+
+.content {
+  background-color: var(--color-grey-light-2);
+  min-height: 100rem; }
+
+.container {
+  max-width: 120rem;
+  margin: 0 auto; }
