--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,3 +11,16 @@
     align-items: center;
 }
 
+.content {
+    background-color: var(--color-grey-light-2);
+    min-height: 100rem;
+}
+
+.container {
+    max-width: 120rem;
+    margin: 0 auto;
+}
+
+.main-section {
+
+}
