--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -52,22 +52,25 @@
     display: flex;
 
     &__input {
+        outline: none;
         font-family: inherit;
-        font-size: 1.3rem;
+        font-size: 1.4rem;
         font-weight: 700;
         border: none;
-        border-radius: .4rem;
+        border-radius: .4rem 0 0 .4rem;
         background-color: var(--color-grey-dark-1);
         color: var(--color-grey-dark-3);
         width: 100%;
         height: 4.5rem;
-        padding: 0 1.5rem;
-        margin-right: -3rem;
+        padding-left: 1.5rem;
     }
 
     &__button {
-        border: none;
         background-color: var(--color-grey-dark-1);
+        padding: 0 1.5rem 0 .5rem; 
+        border: none;
+        border-radius: 0 .4rem .4rem 0;
+        display: flex;
 
         &:hover {
             cursor: pointer;
@@ -78,7 +81,7 @@
         width: 1.75rem;
         height: 1.75rem;
         fill: var(--color-grey-dark-3);
-        transform: translateY(.15rem);
+        // transform: translateY(.15rem);
     }
 }
 
@@ -86,7 +89,6 @@
 /////// USER NAVIGATION
 
 .user-nav {
-    align-self: stretch;
     font-weight: 700;
 
     display: flex;
