--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,8 +2,9 @@
     --color-blue-dark-1: #494f5c;
 
     --color-grey-light-1: #F5F5F5;
-    --color-grey-light-2: #E0E0E0;
-    --color-grey-light-3:#9E9E9E;
+    --color-grey-light-2: #EEEEEE;
+    --color-grey-light-3: #E0E0E0;
+    --color-grey-light-4:#9E9E9E;
 
     --color-grey-dark-1: #757575;
     --color-grey-dark-2: #616161;
@@ -28,5 +29,4 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     line-height: 1.6;
-    background-color: var(--color-grey-light-1);
 }
