--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -63,6 +63,11 @@
         width: 100%;
         height: 4.5rem;
         padding-left: 1.5rem;
+
+        &::-webkit-input-placeholder {
+            font-weight: 700;
+            color: var(--color-grey-dark-3);
+        }
     }
 
     &__button {
@@ -103,7 +108,7 @@
     }
 
     &__login-link {
-        border: 2px solid var(--color-grey-light-3);
+        border: 2px solid var(--color-grey-light-4);
         border-radius: .4rem 0 0 .4rem;
         border-right: none;
 
@@ -122,12 +127,10 @@
     }
 
     &__signup-link {
-        border: 2px solid var(--color-grey-light-3);
+        border: 2px solid var(--color-grey-light-4);
         border-radius: 0 .4rem .4rem 0;
 
         display: flex;
-        align-items: center;
-        justify-content: center;
     }
 
     &__signup-link:hover {
@@ -138,12 +141,60 @@
     &__icon {
         width: 2.5rem;
         height: 2.5rem;
-        fill: var(--color-grey-light-3);
+        fill: var(--color-grey-light-4);
         margin-right: .5rem;
         transition: all .2s;
     }
 
     &__login-link:hover > &__icon {
         fill: #fff;
+    }
+}
+
+.square {
+
+    box-shadow: 0 .1rem .5rem rgba(0,0,0,.2);
+
+    &:not(:last-of-type) {
+        margin-right: 1.5rem;
+    }
+
+    &__link:link,
+    &__link:visited {
+        background-color: #fff;
+        display: block;
+        text-decoration: none;
+        color: var(--color-grey-dark-3);
+        font-size: 1.4rem;
+        font-weight: 900;
+        text-transform: uppercase;
+        padding: 1.5rem 0 1.5rem 1.5rem;
+        border-bottom: 1px solid var(--color-grey-light-2);
+        transition: all .2s;
+    }
+
+    &__link:hover {
+        text-decoration: underline;
+    }
+
+    &__photo {
+        display: block;
+        width: 100%;
+    }
+
+    &__info {
+        background-color: var(--color-grey-light-1);
+        padding: 1.5rem 0 1.5rem 1.5rem;
+    }
+
+    &__icon {
+
+        &:not(:last-of-type) {
+            margin-right: .5rem;
+        }
+
+        fill: var(--color-grey-dark-3);
+        width: 2rem;
+        height: 2rem;
     }
 }
