--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,7 +3,7 @@
     letter-spacing: .1rem;
     height: 7rem;
     background-color: var(--color-blue-dark-1);
-    color: var(--color-grey-light-3);
+    color: var(--color-grey-light-4);
     padding: 0 2rem;
 
     display: flex;
@@ -13,14 +13,31 @@
 
 .content {
     background-color: var(--color-grey-light-2);
-    min-height: 100rem;
+    padding: 5rem 5rem;
 }
 
-.container {
-    max-width: 120rem;
-    margin: 0 auto;
+.game-section {
+    display: flex;
+    justify-content: space-between;
 }
 
-.main-section {
+.main-view {
+    margin-right: 5rem;
+    flex: 0 0 65%;
 
+    .slide-square {
+
+        &:not(:last-of-type) {
+            margin-bottom: 5rem;
+        }
+
+        display: flex;
+        justify-content: space-between;
+    }
+
+}
+
+.list-view {
+    background-color: yellowgreen;
+    flex: 1;
 }
