--- a/css/style.css
+++ b/css/style.css
@@ -119,19 +119,21 @@ body {
     fill: #fff; }
 
 .square {
-  box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.2); }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.25);
+  background-color: #fff; }
   .square:not(:last-of-type) {
     margin-right: 1.5rem; }
   .square__link:link, .square__link:visited {
-    background-color: #fff;
-    display: block;
-    text-decoration: none;
-    color: var(--color-grey-dark-3);
-    font-size: 1.4rem;
-    font-weight: 900;
+    display: inline-block;
+    padding: 1.25rem 0 1.25rem 1rem;
     text-transform: uppercase;
-    padding: 1.5rem 0 1.5rem 1.5rem;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 900;
+    color: var(--color-grey-dark-3);
     transition: all .2s; }
   .square__link:hover {
     text-decoration: underline; }
@@ -139,14 +141,36 @@ body {
     display: block;
     width: 100%; }
   .square__info {
+    border-top: 1px solid var(--color-grey-light-2);
     background-color: var(--color-grey-light-1);
-    padding: 1.5rem 0 1.5rem 1.5rem; }
+    padding: 1.25rem 0 1.25rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-content: center; }
+  .square__platform {
+    display: flex;
+    align-items: center; }
   .square__icon {
-    fill: var(--color-grey-dark-3);
     width: 2rem;
     height: 2rem; }
     .square__icon:not(:last-of-type) {
       margin-right: .5rem; }
+  .square__list {
+    list-style: none;
+    display: flex; }
+  .square__item {
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: var(--color-grey-dark-3);
+    padding: .8rem 1.25rem .8rem 1rem;
+    margin: 0 1rem;
+    border: 1px solid currentColor;
+    border-radius: .4rem; }
+  .square__price:link, .square__price:visited {
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: var(--color-grey-dark-3); }
 
 .header {
   font-size: 1.6rem;
@@ -170,11 +194,11 @@ body {
 .main-view {
   margin-right: 5rem;
   flex: 0 0 65%; }
-  .main-view .slide-square {
-    display: flex;
-    justify-content: space-between; }
-    .main-view .slide-square:not(:last-of-type) {
-      margin-bottom: 5rem; }
+
+.slide-square {
+  display: flex; }
+  .slide-square:not(:last-child) {
+    margin-bottom: 5rem; }
 
 .list-view {
   background-color: yellowgreen;
