--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -152,8 +152,13 @@
 }
 
 .square {
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-    box-shadow: 0 .1rem .5rem rgba(0,0,0,.2);
+    box-shadow: 0 .25rem 1rem rgba(0,0,0,.25);
+    background-color: #fff;
 
     &:not(:last-of-type) {
         margin-right: 1.5rem;
@@ -161,20 +166,22 @@
 
     &__link:link,
     &__link:visited {
-        background-color: #fff;
-        display: block;
-        text-decoration: none;
-        color: var(--color-grey-dark-3);
-        font-size: 1.4rem;
-        font-weight: 900;
+        display: inline-block;
+        padding: 1.25rem 0 1.25rem 1rem;
         text-transform: uppercase;
-        padding: 1.5rem 0 1.5rem 1.5rem;
-        border-bottom: 1px solid var(--color-grey-light-2);
+        text-decoration: none;
+        font-size: 1.6rem;
+        font-weight: 900;
+        color: var(--color-grey-dark-3);
         transition: all .2s;
     }
 
     &__link:hover {
         text-decoration: underline;
+    }
+
+    &__link-photo {
+
     }
 
     &__photo {
@@ -183,18 +190,52 @@
     }
 
     &__info {
+        border-top: 1px solid var(--color-grey-light-2);
         background-color: var(--color-grey-light-1);
-        padding: 1.5rem 0 1.5rem 1.5rem;
+        padding: 1.25rem 0 1.25rem 1rem;
+
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+    }
+
+    &__platform {
+        display: flex;
+        align-items: center;
     }
 
     &__icon {
-
         &:not(:last-of-type) {
             margin-right: .5rem;
         }
-
-        fill: var(--color-grey-dark-3);
         width: 2rem;
         height: 2rem;
+    }
+
+    &__pricing {
+
+    }
+
+    &__list {
+        list-style: none;
+        display: flex;
+    }
+
+    &__item {
+        font-size: 1.6rem;
+        font-weight: 700;
+        color: var(--color-grey-dark-3);
+        padding: .8rem 1.25rem .8rem 1rem;
+        margin: 0 1rem;
+        border: 1px solid currentColor;
+        border-radius: .4rem;
+    }
+
+    &__price:link,
+    &__price:visited {
+        text-decoration: none;
+        font-size: 1.6rem;
+        font-weight: 700;
+        color: var(--color-grey-dark-3);
     }
 }
