--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,17 +24,13 @@
 .main-view {
     margin-right: 5rem;
     flex: 0 0 65%;
+}
 
-    .slide-square {
-
-        &:not(:last-of-type) {
-            margin-bottom: 5rem;
-        }
-
-        display: flex;
-        justify-content: space-between;
+.slide-square {
+    &:not(:last-child) {
+        margin-bottom: 5rem;
     }
-
+    display: flex;
 }
 
 .list-view {
