--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -151,53 +151,38 @@
     }
 }
 
-.square {
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+/////////////////////////////////////////////////////////
+/////// SQUARE
 
-    box-shadow: 0 .25rem 1rem rgba(0,0,0,.25);
-    background-color: #fff;
-
-    &:not(:last-of-type) {
-        margin-right: 1.5rem;
+.game-thumbnail {
+    &__photo {
+        display: block;
+        width: 100%;
     }
+}
+
+.game-title {
+    border-bottom: 1px solid var(--color-grey-light-2);
+    background-color: #fff;
 
     &__link:link,
     &__link:visited {
-        display: inline-block;
-        padding: 1.25rem 0 1.25rem 1rem;
+        color: var(--color-grey-dark-3);
         text-transform: uppercase;
         text-decoration: none;
-        font-size: 1.6rem;
+        font-size: 1.5rem;
         font-weight: 900;
-        color: var(--color-grey-dark-3);
-        transition: all .2s;
+        display: inline-block;
+        padding: .75rem .75rem;
     }
 
     &__link:hover {
         text-decoration: underline;
     }
+}
 
-    &__link-photo {
-
-    }
-
-    &__photo {
-        display: block;
-        width: 100%;
-    }
-
-    &__info {
-        border-top: 1px solid var(--color-grey-light-2);
-        background-color: var(--color-grey-light-1);
-        padding: 1.25rem 0 1.25rem 1rem;
-
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-    }
+.game-info {
+    padding: 1.25rem .75rem;
 
     &__platform {
         display: flex;
@@ -205,37 +190,11 @@
     }
 
     &__icon {
+        width: 2rem;
+        height: 2rem;
+
         &:not(:last-of-type) {
             margin-right: .5rem;
         }
-        width: 2rem;
-        height: 2rem;
-    }
-
-    &__pricing {
-
-    }
-
-    &__list {
-        list-style: none;
-        display: flex;
-    }
-
-    &__item {
-        font-size: 1.6rem;
-        font-weight: 700;
-        color: var(--color-grey-dark-3);
-        padding: .8rem 1.25rem .8rem 1rem;
-        margin: 0 1rem;
-        border: 1px solid currentColor;
-        border-radius: .4rem;
-    }
-
-    &__price:link,
-    &__price:visited {
-        text-decoration: none;
-        font-size: 1.6rem;
-        font-weight: 700;
-        color: var(--color-grey-dark-3);
     }
 }
