--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -33,6 +33,18 @@
     display: flex;
 }
 
+.square {
+    box-shadow: 0 .25rem .35rem rgba(0,0,0,0.2);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    &:not(:last-of-type) {
+        margin-right: 2rem;
+    }
+}
+
 .list-view {
     background-color: yellowgreen;
     flex: 1;
