finish main-view

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -10,6 +10,8 @@
     --color-grey-dark-2: #616161;
     --color-grey-dark-3: #424242;
     --color-grey-dark-4: #212121;
+
+    --color-money: yellowgreen;
 }
 
 *,
