--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -35,7 +35,8 @@
 
 .square {
     box-shadow: 0 .25rem .35rem rgba(0,0,0,0.2);
-
+    background-color: #fff;
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
