--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
   --color-grey-dark-1: #757575;
   --color-grey-dark-2: #616161;
   --color-grey-dark-3: #424242;
-  --color-grey-dark-4: #212121; }
+  --color-grey-dark-4: #212121;
+  --color-money: yellowgreen; }
 
 *,
 *::after,
@@ -123,13 +124,12 @@ body {
   width: 100%; }
 
 .game-title {
-  border-bottom: 1px solid var(--color-grey-light-2);
-  background-color: #fff; }
+  width: 85%; }
   .game-title__link:link, .game-title__link:visited {
     color: var(--color-grey-dark-3);
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 900;
     display: inline-block;
     padding: .75rem .75rem; }
@@ -137,15 +137,44 @@ body {
     text-decoration: underline; }
 
 .game-info {
-  padding: 1.25rem .75rem; }
+  border-top: 1px solid var(--color-grey-light-2);
+  background-color: var(--color-grey-light-1);
+  padding: 1.25rem 1.25rem;
+  display: flex;
+  justify-content: space-between; }
   .game-info__platform {
     display: flex;
     align-items: center; }
   .game-info__icon {
     width: 2rem;
-    height: 2rem; }
+    height: 2rem;
+    fill: var(--color-grey-dark-3); }
     .game-info__icon:not(:last-of-type) {
       margin-right: .5rem; }
+  .game-info__discount:link, .game-info__discount:visited {
+    background-color: var(--color-money);
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 900;
+    display: inline-block;
+    border: 1px solid currentColor;
+    border-radius: .4rem;
+    padding: .5rem 1rem; }
+  .game-info__price:link, .game-info__price:visited {
+    color: var(--color-grey-dark-3);
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 900;
+    display: inline-block;
+    border: 1px solid currentColor;
+    border-radius: .4rem;
+    padding: .5rem 1rem;
+    margin-left: .3rem;
+    transition: all .2s; }
+  .game-info__price:hover {
+    background-color: var(--color-money);
+    color: #fff; }
 
 .header {
   font-size: 1.6rem;
@@ -177,6 +206,7 @@ body {
 
 .square {
   box-shadow: 0 0.25rem 0.35rem rgba(0, 0, 0, 0.2);
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
