--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -162,15 +162,13 @@
 }
 
 .game-title {
-    border-bottom: 1px solid var(--color-grey-light-2);
-    background-color: #fff;
-
+    width: 85%;
     &__link:link,
     &__link:visited {
         color: var(--color-grey-dark-3);
         text-transform: uppercase;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         font-weight: 900;
         display: inline-block;
         padding: .75rem .75rem;
@@ -182,7 +180,12 @@
 }
 
 .game-info {
-    padding: 1.25rem .75rem;
+    border-top: 1px solid var(--color-grey-light-2);
+    background-color: var(--color-grey-light-1);
+    padding: 1.25rem 1.25rem;
+
+    display: flex;
+    justify-content: space-between;
 
     &__platform {
         display: flex;
@@ -192,9 +195,46 @@
     &__icon {
         width: 2rem;
         height: 2rem;
+        fill: var(--color-grey-dark-3);
 
         &:not(:last-of-type) {
             margin-right: .5rem;
         }
+    }
+
+    &__pricing {
+
+    }
+
+    &__discount:link,
+    &__discount:visited {
+        background-color: var(--color-money);
+        color: #fff;
+        text-decoration: none;
+        font-size: 1.4rem;
+        font-weight: 900;
+        display: inline-block;
+        border: 1px solid currentColor;
+        border-radius: .4rem;
+        padding: .5rem 1rem;
+    }
+
+    &__price:link,
+    &__price:visited {
+        color: var(--color-grey-dark-3);
+        text-decoration: none;
+        font-size: 1.4rem;
+        font-weight: 900;
+        display: inline-block;
+        border: 1px solid currentColor;
+        border-radius: .4rem;
+        padding: .5rem 1rem;
+        margin-left: .3rem;
+        transition: all .2s;
+    }
+
+    &__price:hover {
+        background-color: var(--color-money);
+        color: #fff;
     }
 }
