refactor code, rename class

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,101 @@ body {
   font-weight: 400;
   line-height: 1.6; }
 
+.secondary-heading {
+  color: var(--color-grey-dark-3);
+  font-size: 1.6rem;
+  font-weight: 900;
+  letter-spacing: .025rem;
+  text-transform: uppercase;
+  padding: 1rem 0; }
+
+.slide-square {
+  display: flex; }
+  .slide-square:not(:last-child) {
+    margin-bottom: 4rem; }
+
+.square {
+  box-shadow: 0 0.25rem 0.35rem rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .square:not(:last-child) {
+    margin-right: 2rem; }
+
+.game-thumbnail__photo {
+  display: block;
+  width: 100%; }
+
+.game-title {
+  width: 85%; }
+  .game-title__link:link, .game-title__link:visited {
+    color: var(--color-grey-dark-3);
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 900;
+    letter-spacing: .015rem;
+    display: inline-block;
+    padding: .75rem .75rem; }
+  .game-title__link:hover {
+    text-decoration: underline; }
+
+.game-info {
+  border-top: 1px solid var(--color-grey-light-2);
+  background-color: var(--color-grey-light-1);
+  padding: 1.25rem 1.25rem;
+  display: flex;
+  justify-content: space-between; }
+  .game-info__platform {
+    display: flex;
+    align-items: center; }
+  .game-info__icon {
+    width: 2rem;
+    height: 2rem;
+    fill: var(--color-grey-dark-3); }
+    .game-info__icon:not(:last-of-type) {
+      margin-right: .5rem; }
+  .game-info__discount:link, .game-info__discount:visited {
+    background-color: var(--color-money);
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 900;
+    display: inline-block;
+    border: 1px solid currentColor;
+    border-radius: .4rem;
+    padding: .5rem 1rem; }
+  .game-info__price:link, .game-info__price:visited {
+    color: var(--color-grey-dark-3);
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 900;
+    display: inline-block;
+    border: 1px solid currentColor;
+    border-radius: .4rem;
+    padding: .5rem 1rem;
+    margin-left: .3rem;
+    transition: all .2s; }
+  .game-info__price:hover {
+    background-color: var(--color-money);
+    color: #fff; }
+
+.container {
+  background-color: var(--color-grey-light-2);
+  padding: 5rem 5rem; }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-blue-dark-1);
+  color: var(--color-grey-light-4);
+  font-size: 1.6rem;
+  letter-spacing: .1rem;
+  height: 7rem;
+  padding: 0 2rem; }
+
 .logo-box {
   color: var(--color-grey-light-2); }
   .logo-box__link {
@@ -103,6 +198,8 @@ body {
     border-right: none; }
   .user-nav__login-link:hover + .user-nav__signup-link {
     border-left: 2px solid #fff; }
+  .user-nav__login-link:hover > .user-nav__icon {
+    fill: #fff; }
   .user-nav__signup-link {
     border: 2px solid var(--color-grey-light-4);
     border-radius: 0 .4rem .4rem 0;
@@ -116,126 +213,13 @@ body {
     fill: var(--color-grey-light-4);
     margin-right: .5rem;
     transition: all .2s; }
-  .user-nav__login-link:hover > .user-nav__icon {
-    fill: #fff; }
 
-.main-header {
-  padding: 1rem 0; }
-  .main-header__text {
-    color: var(--color-grey-dark-3);
-    font-size: 1.6rem;
-    font-weight: 900;
-    letter-spacing: .025rem;
-    text-transform: uppercase; }
-
-.game-thumbnail__photo {
-  display: block;
-  width: 100%; }
-
-.game-title {
-  width: 85%; }
-  .game-title__link:link, .game-title__link:visited {
-    color: var(--color-grey-dark-3);
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1.4rem;
-    font-weight: 900;
-    letter-spacing: .015rem;
-    display: inline-block;
-    padding: .75rem .75rem; }
-  .game-title__link:hover {
-    text-decoration: underline; }
-
-.game-info {
-  border-top: 1px solid var(--color-grey-light-2);
-  background-color: var(--color-grey-light-1);
-  padding: 1.25rem 1.25rem;
-  display: flex;
-  justify-content: space-between; }
-  .game-info__platform {
-    display: flex;
-    align-items: center; }
-  .game-info__icon {
-    width: 2rem;
-    height: 2rem;
-    fill: var(--color-grey-dark-3); }
-    .game-info__icon:not(:last-of-type) {
-      margin-right: .5rem; }
-  .game-info__discount:link, .game-info__discount:visited {
-    background-color: var(--color-money);
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.4rem;
-    font-weight: 900;
-    display: inline-block;
-    border: 1px solid currentColor;
-    border-radius: .4rem;
-    padding: .5rem 1rem; }
-  .game-info__price:link, .game-info__price:visited {
-    color: var(--color-grey-dark-3);
-    text-decoration: none;
-    font-size: 1.4rem;
-    font-weight: 900;
-    display: inline-block;
-    border: 1px solid currentColor;
-    border-radius: .4rem;
-    padding: .5rem 1rem;
-    margin-left: .3rem;
-    transition: all .2s; }
-  .game-info__price:hover {
-    background-color: var(--color-money);
-    color: #fff; }
-
-.list-view-nav {
-  list-style: none;
-  display: flex;
-  justify-content: space-around; }
-  .list-view-nav li:hover {
-    border-bottom: 2px solid cornflowerblue; }
-  .list-view-nav__link:link, .list-view-nav__link:visited {
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-decoration: none;
-    color: var(--color-grey-dark-3); }
-
-.header {
-  font-size: 1.6rem;
-  letter-spacing: .1rem;
-  height: 7rem;
-  background-color: var(--color-blue-dark-1);
-  color: var(--color-grey-light-4);
-  padding: 0 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; }
-
-.content {
-  background-color: var(--color-grey-light-2);
-  padding: 5rem 5rem; }
-
-.game-section {
-  display: flex;
-  justify-content: space-between; }
-
-.main-view {
-  margin-right: 5rem;
-  flex: 0 0 65%; }
-
-.slide-square {
+.primary-section {
   display: flex; }
-  .slide-square:not(:last-child) {
-    margin-bottom: 4rem; }
-
-.square {
-  box-shadow: 0 0.25rem 0.35rem rgba(0, 0, 0, 0.2);
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; }
-  .square:not(:last-of-type) {
-    margin-right: 2rem; }
-
-.list-view {
-  flex: 1;
-  background-color: yellowgreen;
-  padding-top: 1rem; }
+  .primary-section .category-view {
+    margin-right: 5rem;
+    flex: 0 0 65%; }
+  .primary-section .list-view {
+    flex: 1;
+    background-color: yellowgreen;
+    padding-top: 1rem; }
