--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,16 @@
-@import "base";
-@import "components";
-@import "layout";
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/varibles";
+
+@import "base/animation";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities"; 
+ 
+@import "components/slidesquare";  
+@import "components/square";
+
+@import "layout/main";
+@import "layout/navigation"; 
+
+@import "pages/home";
