--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import "abstracts/functions";
+@import "abstracts/functions";  
 @import "abstracts/mixins";
 @import "abstracts/varibles";
 
@@ -7,8 +7,8 @@
 @import "base/typography";
 @import "base/utilities"; 
  
-@import "components/slidesquare";  
-@import "components/square";
+@import "components/button";    
+@import "components/game-list";
 
 @import "layout/main";
 @import "layout/navigation"; 
